--- a/pms-services/pom.xml
+++ b/pms-services/pom.xml
@@ -8,4 +8,10 @@
 	</parent>
 	<artifactId>pms-services</artifactId>
 	<name>PMS Services</name>
+	<dependencies>
+		<dependency>
+			<groupId>org.springframework.data</groupId>
+			<artifactId>spring-data-jpa</artifactId>
+		</dependency>
+	</dependencies>
 </project>
